# signal-and-noise

./: .gitattributes  .gitignore  README.md  pyproject.toml
analysis/: datadecide.ipynb  sample_size.ipynb  scaling.ipynb  smooth_last_n.ipynb  smooth_metric.ipynb  smooth_subtasks.ipynb  snr_variants.ipynb  table.ipynb
analysis/.ipynb_checkpoints/: datadecide-checkpoint.ipynb
analysis/data/data/: random_seeds-00000-of-00001.parquet
analysis/plotting/: __init__.py  datadecide.py  scaling.py
results/: computations_eg.py  correl_dacc.py  flexible_tasks.py  hug.py  job_test.py  k_folds_benchmarks.py  permissive_eval.py  permissive_eval_copy.py  prep_jobs.py  run_on_folds.py  sanity_check_snr_acc.py  snr_utils.py  test.py  understand_core_setup.py  understand_setup.py  verify_folds.py  visualization.py
results/agi-gaokao-smoke/: metrics-all.jsonl  metrics.json  task-000-agi_eval_gaokao-english:rc-metrics.json  task-000-agi_eval_gaokao-english:rc-predictions.jsonl  task-000-agi_eval_gaokao-english:rc-recorded-inputs.jsonl
results/arc-easy-smoke/: metrics-all.jsonl  metrics.json  task-000-arc_easy-metrics.json  task-000-arc_easy-predictions.jsonl  task-000-arc_easy-recorded-inputs.jsonl
results/hellaswag-125M/: metrics-all.jsonl  metrics.json  task-000-hellaswag-metrics.json  task-000-hellaswag-recorded-inputs.jsonl
results/hellaswag-smoke/: metrics-all.jsonl  metrics.json  task-000-hellaswag-metrics.json  task-000-hellaswag-predictions.jsonl
results/hellaswag-smoke1/: metrics-all.jsonl  metrics.json  task-000-hellaswag-metrics.json  task-000-hellaswag-predictions.jsonl  task-000-hellaswag-recorded-inputs.jsonl
results/k_folds/arc_easy_fold_0_DCLM-baseline-20M-5xC/: metrics-all.jsonl  metrics.json  task-000-arc_easy_flexible-metrics.json  task-000-arc_easy_flexible-predictions.jsonl
results/k_folds/arc_easy_fold_0_dolma17-25p-DCLM-baseline-75p-150M-5xC/: metrics-all.jsonl  metrics.json  task-000-arc_easy_flexible-metrics.json  task-000-arc_easy_flexible-predictions.jsonl  task-000-arc_easy_flexible-recorded-inputs.jsonl
results/k_folds/arc_easy_fold_1/: metrics-all.jsonl  metrics.json  (+3 more)
results/mmlu-algebra-smoke/: metrics-all.jsonl  metrics.json  task-000-mmlu_abstract_algebra-metrics.json  task-000-mmlu_abstract_algebra-predictions.jsonl  task-000-mmlu_abstract_algebra-recorded-inputs.jsonl
snr/: dataloader.py  ladder_wrapper.py  mask_analysis.py  metaanalysis.py  metrics.py  plot.py  snr_simple.py  snr_variants.py  stats.py
snr/autobencher/: README.md  compile_autobencher.py  requirements.txt  run_autobencher.sh
snr/constants/: __init__.py  datadecide.py  ladder.py  models.py  plot.py  signal.py  smooth.py  tasks.py
snr/download/: hf.py
snr/scripts/: launch_eval.py  oe_eval_tasks.py  resource_util.py
(+462 files in other folders)
